[gd_scene load_steps=7 format=2]

[ext_resource path="res://TestModel/theme_main_ui.tres" type="Theme" id=1]
[ext_resource path="res://TestModel/3DView.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/figurine.png" type="Texture" id=3]
[ext_resource path="res://UI/fightJ.png" type="Texture" id=4]
[ext_resource path="res://UI/ShapeKeys.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/MainUI.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerSplitView" type="HSplitContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container3DView" type="VBoxContainer" parent="ContainerSplitView"]
margin_right = 474.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerSplitView/Container3DView"]
margin_right = 474.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerSplitView/Container3DView/HBoxContainer"]
margin_right = 474.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ContainerSplitView/Container3DView/HBoxContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 56.0
icon = ExtResource( 4 )

[node name="Button2" type="Button" parent="ContainerSplitView/Container3DView/HBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 128.0
margin_bottom = 56.0
icon = ExtResource( 3 )

[node name="ContainerViewport" type="ViewportContainer" parent="ContainerSplitView/Container3DView"]
margin_top = 60.0
margin_right = 474.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ContainerSplitView/Container3DView/ContainerViewport"]
size = Vector2( 474, 660 )
handle_input_locally = false
msaa = 2
debanding = true
hdr = false
render_target_update_mode = 3

[node name="Spatial" parent="ContainerSplitView/Container3DView/ContainerViewport/Viewport" instance=ExtResource( 2 )]

[node name="ContainerUI" type="TabContainer" parent="ContainerSplitView"]
margin_left = 486.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Emotions" type="VBoxContainer" parent="ContainerSplitView/ContainerUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EmotionList" type="ItemList" parent="ContainerSplitView/ContainerUI/Emotions"]
margin_right = 786.0
margin_bottom = 581.0
size_flags_vertical = 3
size_flags_stretch_ratio = 90.0

[node name="ButtonDelete" type="Button" parent="ContainerSplitView/ContainerUI/Emotions"]
margin_top = 585.0
margin_right = 786.0
margin_bottom = 611.0
text = "Delete"

[node name="HSeparator" type="HSeparator" parent="ContainerSplitView/ContainerUI/Emotions"]
margin_top = 615.0
margin_right = 786.0
margin_bottom = 647.0
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="ButtonAdd" type="Button" parent="ContainerSplitView/ContainerUI/Emotions"]
margin_top = 651.0
margin_right = 786.0
margin_bottom = 677.0
text = "Add"

[node name="ShapeKeys" parent="ContainerSplitView/ContainerUI" instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="ContainerSplitView/Container3DView/HBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ContainerSplitView/Container3DView/HBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="item_activated" from="ContainerSplitView/ContainerUI/Emotions/EmotionList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="ContainerSplitView/ContainerUI/Emotions/EmotionList" to="." method="_on_EmotionList_item_selected"]
[connection signal="pressed" from="ContainerSplitView/ContainerUI/Emotions/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="ContainerSplitView/ContainerUI/Emotions/ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
